--- a/src/pages/GenrePage/styles.module.css
+++ b/src/pages/GenrePage/styles.module.css
@@ -17,17 +17,10 @@
     border-radius: 8px;
     max-height: calc(100vh - 67px - (51px * 2));
     box-sizing: border-box;
-}
-.genres h3 {
-    font-family: 'Open Sans', sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 22px;
-    color: #000000;
     margin: 0;
+    min-width: 285px;
 }
-.genres div {
+.genres li {
     font-family: 'Open Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
@@ -36,4 +29,13 @@
     color: #000000;
     cursor: pointer;
     user-select: none;
+    list-style: none;
+}
+.genres li.focus {
+    font-family: 'Open Sans', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 22px;
+    color: #000000;
 }
